Fix margin/padding shift

--- a/addons/custom-menu-bar/menu-labels.css
+++ b/addons/custom-menu-bar/menu-labels.css
@@ -7,8 +7,8 @@
 }
 
 [class*="menu-bar_hoverable"] > span {
-  margin-right: 0;
-  padding-right: 0;
+  margin: 0;
+  padding: 0;
 }
 
 @media (max-width: 1024px) {
